# materia

./: .gitignore  CMakeLists.txt  CMakeSettings.json
env/cli/: cli.bat
env/cli/commands/: build.cmd
env/cli/internal/: atma.cs
env/jive/project/: Dyncom.cs  Jive.sln
env/jive/project/Commands/: Gen.cs
env/jive/shell/: cli.bat
env/macl/: macl.sln
env/mantle/project/: Mantle.cs  Mantle.csproj
env/mantle/project/Properties/: launchSettings.json
projects/atma/: CMakeLists.txt  atma.build.cs  atma.vcxproj  atma.vcxproj.filters  cmake_install.cmake
projects/atma/include/atma/: algorithm.hpp  assert.hpp  atomic.hpp  benchmark.hpp  bitmask.hpp  com_ptr.hpp  console.hpp  delegate.hpp  event.hpp  function.hpp  hash.hpp  hash_map.hpp  preprocessor.hpp  shared_memory.hpp  string.hpp  threading.hpp  tuple.hpp  unit_test.hpp
projects/atma/include/atma/config/: platform.hpp
projects/atma/include/atma/lockfree/: queue.hpp
projects/atma/include/atma/math/: aabb.hpp  aabc.hpp  constants.hpp  intersection.hpp  matrix4f.hpp  scalar.hpp  triangle.hpp  vector4f.hpp  vector4i.hpp
projects/atma/include/atma/platform/: allocation.hpp
projects/atma/include/atma/thread/: engine.hpp
projects/atma/include/atma/utf/: algorithm.hpp  utf8_string.hpp
projects/atma/modules/: benchmark.cppm  intrusive_ptr.cppm  meta.cppm
projects/atma/src/atma_test/: queue.cpp  test_utf8_string.cpp
projects/boost/: CMakeLists.txt
projects/doctest/: CMakeLists.txt
projects/rose/: CMakeLists.txt  cmake_install.cmake  rose.vcxproj  rose.vcxproj.filters
projects/rose/include/rose/: console.hpp  path.hpp  rose_fwd.hpp
